--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@react-native-community/async-storage": "^1.12.1",
     "@react-native-community/hooks": "^2.6.0",
     "expo": "~40.0.0",
+    "expo-constants": "~9.3.3",
     "expo-status-bar": "~1.0.3",
     "react": "16.13.1",
     "react-dom": "16.13.1",
